--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ path = "lib.rs"
 
 [dependencies]
 libc = "0.2"
-heartbeats-simple-sys = "0.4"
+# heartbeats-simple-sys = "0.4"
+heartbeats-simple-sys = { path = "../heartbeats-simple-sys/" }
